# server/src/routes/pondRoutes.ts
@@ -4,10 +4,11 @@ import {
   getAllPonds,
   getPondByID,
 } from "../controllers/PondController";
+import { authMiddleware } from "../middleware";
 const router = Router();
 
-router.get("/all", getAllPonds);
-router.get("/getPondByID/:id", getPondByID);
+router.get("/all", authMiddleware, getAllPonds);
+router.get("/getPondByID/:id", authMiddleware, getPondByID);
 
-router.post("/create", createPond);
+router.post("/create", authMiddleware, createPond); // chua phonenumber
 export default router;
